--- a/PitchPerfect/Base.lproj/Main.storyboard
+++ b/PitchPerfect/Base.lproj/Main.storyboard
@@ -6,10 +6,10 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Record Sounds View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="PitchPerfect" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="RecordSoundsViewController" customModule="PitchPerfect" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -51,11 +51,30 @@
                         <outlet property="recordButton" destination="25Z-M4-PGd" id="yMZ-aP-d2Y"/>
                         <outlet property="recordingLabel" destination="1gY-fI-TvX" id="XKL-2J-G02"/>
                         <outlet property="stopRecordingButton" destination="edS-Wx-Ogf" id="g0Q-5q-BfS"/>
+                        <segue destination="LYm-iQ-7Pc" kind="show" identifier="stopRecording" id="cLL-MZ-hA9"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="860" y="118.29085457271366"/>
+        </scene>
+        <!--Play Sounds View Controller-->
+        <scene sceneID="hxf-pB-PR1">
+            <objects>
+                <viewController id="LYm-iQ-7Pc" customClass="PlaySoundsViewController" customModule="PitchPerfect" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="mOy-bD-DJP"/>
+                        <viewControllerLayoutGuide type="bottom" id="1gg-9U-2nz"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="YZR-VJ-Nbb">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" red="0.0" green="1" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="0rh-Hx-FNk" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1687" y="117"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="SBG-mX-M7W">
